fix: dropdowns on ios

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -111,6 +111,10 @@ svg {
 }
 
 details {
+	@supports (interpolate-size: allow-keywords) {
+		--border-delay: 300ms;
+	}
+
 	interpolate-size: allow-keywords;
 	margin-top: 20px;
 	background-color: var(--yellow);
@@ -124,26 +128,19 @@ details {
 		transition:
 			opacity 300ms,
 			height 300ms,
-			box-shadow 0ms 300ms,
-			padding-top 0ms 300ms,
+			box-shadow 0ms var(--border-delay, 0ms),
 			content-visibility 300ms allow-discrete;
 	}
 
-	&:open::details-content {
+	&[open]::details-content {
+		--border-delay: 0ms;
 		height: auto;
 		padding-top: 3px;
 		box-shadow: inset 0 3px 0 0 var(--orange);
-		transition:
-			opacity 300ms,
-			height 300ms,
-			box-shadow 0ms 0ms,
-			padding-top 0ms 0ms,
-			content-visibility 300ms allow-discrete;
 	}
 
-
 	/* Style when the details element is [open] */
-	&:open::details-content {
+	&[open]::details-content {
 		height: auto;
 	}
 
@@ -151,9 +148,14 @@ details {
 		padding: 10px 15px;
 		text-align: center;
 		cursor: pointer;
+		list-style: none;
 
 		&::marker {
 			content: "";
+			display: none;
+		}
+		&::-webkit-details-marker {
+			display: none;
 		}
 		&::before {
 			content: "";
@@ -162,14 +164,14 @@ details {
 			height: 20px;
 			mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='currentColor' class='size-5'%3E%3Cpath fill-rule='evenodd' d='M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z' clip-rule='evenodd' /%3E%3C/svg%3E%0A");	background-size: contain;
 			background-repeat: no-repeat;
-			margin-top: 0.25rem;
+			margin-top: -0.25rem;
 			margin-right: 0.25rem;
 			display: inline-block;
-			vertical-align: top;
+			vertical-align: middle;
 			transition: rotate 150ms;
 		}
 	}
-	&:open summary {
+	&[open] summary {
 		&::before {
 			rotate: 90deg;
 		}
